force-app/main/default/objects/Change_Management_Integration_Credential__c/Change_Management_Integration_Credential__c.object-meta.xml
<CustomObject>
    <description>This object stores the authentication credentials to the external system.</description>
    <label>Change Management Integration</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Management Integrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>