force-app/main/default/objects/Change_Management_Integration_Credential__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <label>External System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
                <default>true</default>
                <label>JIRA</label>
            </value>
            <value>
                <fullName>VersionOne</fullName>
            </value>
            <value>
                <fullName>Rally</fullName>
            </value>
            <value>
                <fullName>Agile Accelerator</fullName>
            </value>
            <value>
                <fullName>ScrumDo</fullName>
            </value>
            <value>
                <fullName>Targetprocess</fullName>
            </value>
            <value>
                <fullName>Visual Studio Team Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>