force-app/main/default/objects/Change_Management_Integration_Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_System__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <columns>Authentication_Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>